Change log 1.4 (under development)
----------------------------------
* Added support for JUnit 4.8.1 (issue 226)
* Fixed so that a "mock name" is set in the Mockito extension API. Fixes NullPointerException when e.g. toString is invoked on a mock. (issue 239)
* Changed method signature on "mockStatic" to return void in the Mockito extension API.

Change log 1.3.6 (2010-03-10)
-----------------------------
* Added testng to full release project.
* Fixed so that classloader executor supports runnable's.
* DeepCloner now supports reference cloning.
* DeepCloner now supports cloning enum constants.
* DeepCloner now supports cloning standard java types (using simple serialization).
* DeepCloner now supports cloning fields in a hierarchy.
* DeepCloner now supports cloning class fields.
* Fixed a bug in the Wildcard matcher which resulted in that classes located in packages containing "junit.", "java.", "sun." in their name was never prepared for test (issue 225).
* Fixed so that you can mock anonymous inner classes with the Mockito API extension (issue 227).
* Nested classes declared inside the test case are automatically prepared for test.
* Minor improvement in the byte-code manipulation; only package private classes are changed to public.
* Upgraded he EasyMock extension API to use EasyMock class extension 2.5.2 (due to internal changes in EasyMock it's not backward compatible with older versions).
* Upgraded to Objenesis for powermock-reflect to 1.2.
* Fixed so that MockGateway now finds the correct method to invoke when several overloaded method candidates are found (issue 229).
* Upgraded to Mockito 1.8.3.
* Added support for Mockito annotations @Spy, @Captor and @InjectMocks.
* Mockito extension now supports real partial mocking for private (and private final) methods (both static and instance methods) using PowerMockito.doReturn(..), PowerMockito.doThrow(..) etc.